test/spec_vectors/func/fail/module_48.wat
(module (func $type-return-num-vs-num (result i32) (return (i64.const 1)) (i32.const 1)))